<resources>
    <string name="app_name">TaskOptimizer</string>
    <string name="title_home">Overview</string>
    <string name="title_dashboard">Reminders</string>
    <string name="title_notifications">Optimizer</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="description">Description</string>
    <string name="BackArrow"><![CDATA[<-]]></string>
    <string name="month_view">May 2023</string>
    <string name="ForwardArrow"><![CDATA[->]]></string>
    <string name="Sunday">SUN</string>
    <string name="Monday">MON</string>
    <string name="Tuesday">TUE</string>
    <string name="Wednesday">WED</string>
    <string name="Thursday">THU</string>
    <string name="Friday">FRI</string>
    <string name="Saturday">SAT</string>
    <string name="optimize">Optimize</string>
    <string name="priority">Priority</string>
    <string name="estimated">Estimated duration</string>
    <string name="time_remaining">Remaining Time:</string>
    <string name="date">Date:</string>
    <string name="time_worked_on_task">Time worked on task:</string>
    <string name="suggested_daily_work">Suggested time daily:</string>
    <string name="delete">Delete Button</string>
    <string name="focus">Focus</string>
    <string name="focus_button">Focus Button</string>
    <string name="title_activity_login">login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="log_out">LOG OUT</string>
    <string name="optimization_parameters">Optimization Parameters</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="alt_variable">Alt Variable</string>
    <string name="sign_up">SIGN UP</string>
    <string name="focus_timer_active">Focus Timer Active!</string>
    <string name="textview">TextView</string>
    <string name="stop_focus_timer">Stop Focus Timer</string>

</resources>