<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NavBarControl">


    <item
        android:id="@+id/chatBox"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/faq"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/darktheme"
        android:title="Change Theme"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout"
        android:title="Log Out"
        app:showAsAction="never"/>



</menu>