<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment"
    style="@style/SCREEN">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/previousMonthAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BackArrow"

            android:background="@null"
            android:textStyle="bold"
            android:textSize="20sp"
            style="@style/BUTTON"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/month_view"
            android:textSize="20sp"
            android:textAlignment="center"
            style="@style/TEXT"/>

        <Button
            android:id="@+id/nextMonthAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ForwardArrow"
            android:background="@null"
            android:textStyle="bold"
            android:textSize="20sp"
            style="@style/BUTTON"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Sunday"
            android:textAlignment="center"
            android:textSize="16sp"
            style="@style/TEXT"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Monday"
            android:textAlignment="center"
            android:textSize="16sp"
            style="@style/TEXT"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Tuesday"
            android:textAlignment="center"
            android:textSize="16sp"
            style="@style/TEXT"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Wednesday"
            android:textAlignment="center"
            android:textSize="16sp"
            style="@style/TEXT"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Thursday"
            android:textAlignment="center"
            android:textSize="16sp"
            style="@style/TEXT"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Friday"
            android:textAlignment="center"
            android:textSize="16sp"
            style="@style/TEXT"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Saturday"
            android:textAlignment="center"
            android:textSize="16sp"
            style="@style/TEXT"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>



