<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/description_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/edit_btn"
                app:layout_constraintStart_toEndOf="@+id/checkBox2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/priority_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:text="@string/priority"
                app:layout_constraintStart_toEndOf="@+id/date_textView"
                app:layout_constraintTop_toBottomOf="@+id/description_textview" />

            <TextView
                android:id="@+id/remainingTime_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="12dp"
                android:text="@string/time_remaining"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/difficulty_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/estimated"
                app:layout_constraintStart_toEndOf="@+id/priority_label"
                app:layout_constraintTop_toBottomOf="@+id/description_textview" />

            <TextView
                android:id="@+id/date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timeWorkedOnTask_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/time_worked_on_task"
                app:layout_constraintBottom_toTopOf="@+id/remainingTime_textView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/suggestedDailyTime_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/suggested_daily_work"
                app:layout_constraintBottom_toTopOf="@+id/timeWorkedOnTask_textview"
                app:layout_constraintEnd_toStartOf="@+id/focus_btn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="54dp"
                android:layout_height="55dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/delete_btn"
                android:layout_width="64dp"
                android:layout_height="49dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/baseline_delete_24"
                tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/edit_btn"
                android:layout_width="58dp"
                android:layout_height="63dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/BackArrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_edit_24"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/focus_btn"
                android:layout_width="57dp"
                android:layout_height="56dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/focus_button"
                app:layout_constraintBottom_toTopOf="@+id/delete_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_btn"
                app:srcCompat="@drawable/baseline_notifications_off_24"
                tools:ignore="RedundantDescriptionCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>