<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/login">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/signin"
        android:background="#30ffffff"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:autofillHints=""
        android:inputType=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:background="#30ffffff"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:text="@string/login"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupbtn"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:text="@string/sign_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip_btn"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="665dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:text="SKIP"
        tools:ignore="HardcodedText" />

</RelativeLayout>